@@ -331,6 +331,7 @@ struct SCIP_Set
    /* timing settings */
    SCIP_CLOCKTYPE        time_clocktype;     /**< default clock type to use */
    SCIP_Bool             time_enabled;       /**< is timing enabled? */
+   SCIP_Bool             time_reading;       /**< belongs reading time to solving time? */
 
    /* VBC tool settings */
    char*                 vbc_filename;       /**< name of the VBC Tool output file, or - if no output should be created */
